tests/codegen/errors/reader/collections-refinements/atom.reader.error.reader.set.missing.close/reader-set-missing-close.mon
;; TEST-ID: tests.codegen.reader-error.reader-set-missing-close
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/collections-refinements
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected '}' to close set literal
;; TEST-ATOM: atom.reader.error.reader.set.missing.close
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.set.missing.close
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected '}' to close set literal
;; TEST-READER-PATH: reader.c:6518 parser.set
;; TEST-CODEGEN-PATH: diagnostic.parser.set
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6518 Expected '}' to close set literal
;; TEST-USES-ATOM: atom.reader.error.reader.set.missing.close
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.set
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/collections-refinements/atom.reader.error.reader.set.missing.close
;; TEST-MENU-PATH: codegen/errors/reader/collections-refinements/atom.reader.error.reader.set.missing.close
;; TEST-ATOM-LEAF: atom.reader.error.reader.set.missing.close
;; TEST-CLI-TARGET: codegen errors reader collections-refinements

(module Main)
(show {1 2)
